--- a/数据库/单词.md
+++ b/数据库/单词.md
@@ -24,3 +24,8 @@ vt.
 
 
 desc是describe描述的意思
+![微信截图_20230602122337](https://yangpicbed.oss-cn-guangzhou.aliyuncs.com/微信截图_20230602122337.png)
+
+![1685680875265](https://yangpicbed.oss-cn-guangzhou.aliyuncs.com/1685680875265.png)
+![微信图片_20230225111348](https://yangpicbed.oss-cn-guangzhou.aliyuncs.com/微信图片_20230225111348.png)
+![20230602135428](https://yangpicbed.oss-cn-guangzhou.aliyuncs.com/20230602135428.png)
